Updated jump to module feature to also add back to top buttons and handle modules being added/removed. Updated styling to prevent the sticky header from overlaying the elements

--- a/utils/ski-ui-elements/ski-ui-styles.css
+++ b/utils/ski-ui-elements/ski-ui-styles.css
@@ -112,11 +112,6 @@ html:not(.tox-fullscreen) div.ski-ui-sticky-top {
   background-color: white;
 }
 
-div#wrapper.ski-ui-sticky-container div#context_modules > div > a::before {
-  display: block; 
-  content: " "; 
-  margin-top: -4.5rem; 
-  height: 4.5rem; 
-  visibility: hidden; 
-  pointer-events: none;
+div#wrapper.ski-ui-sticky-container div#context_modules > div.context_module {
+  scroll-margin-top: 4.5rem;
 }
